Modificada vista de la vista de items detalle. Avance en la tarea de identificar fechas de exámenes en detalle manual.
git-svn-id: http://jira.uji.es/repos/uji/HOR/uji-hor-base/trunk@11695 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/src/main/webapp/css/custom.css
+++ b/src/main/webapp/css/custom.css
@@ -1,3 +1,9 @@
 .form-disabled-label {
-	opacity : .3;
+	opacity: .3;
+}
+
+.form-checkboxgroup-legend {
+	font-size: 10px;
+	font-style: italic;
+	margin-left: 0.5px;
 }
