Modificado css para los días de exámenes en detalle manual y detalle de clases
git-svn-id: http://jira.uji.es/repos/uji/HOR/uji-hor-base/trunk@11714 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/src/main/webapp/css/custom.css
+++ b/src/main/webapp/css/custom.css
@@ -2,8 +2,24 @@
 	opacity: .3;
 }
 
-.form-checkboxgroup-legend {
-	font-size: 10px;
+.form-label-date {
+	margin-right: 50px;
+}
+
+.form-label-exams-date {
+	color: grey;
+	margin-right: 50px;
+}
+
+.form-label-exam-date-manual {
+	color: grey;
+}
+
+.form-label-date-manual {
+	
+}
+
+.form-legend-exams {
+	color: grey;
 	font-style: italic;
-	margin-left: 0.5px;
 }
