Añadido icono en el botón "Interval horari..."
git-svn-id: http://jira.uji.es/repos/uji/HOR/uji-hor-base/trunk@12093 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/src/main/webapp/css/custom.css
+++ b/src/main/webapp/css/custom.css
@@ -22,3 +22,5 @@
 	color: grey;
 	font-style: italic;
 }
+
+.time { background-image: url(http://static.uji.es/js/extjs/uji-commons-extjs/img/time.png) !important; background-repeat: no-repeat; }
